src/main/gen/org/jetbrains/xidl/language/parser/XidlParser.java
// This is a generated file. Not intended for manual editing.
package org.jetbrains.xidl.language.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.jetbrains.xidl.language.psi.XidlTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class XidlParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return xidlFile(b, l + 1);
  }

  /* ********************************************************** */
  // none_anno | (annotation (literal_string | literal_strings)?)
  static boolean annotation_item(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_item")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = none_anno(b, l + 1);
    if (!r) r = annotation_item_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // annotation (literal_string | literal_strings)?
  private static boolean annotation_item_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_item_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ANNOTATION);
    r = r && annotation_item_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (literal_string | literal_strings)?
  private static boolean annotation_item_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_item_1_1")) return false;
    annotation_item_1_1_0(b, l + 1);
    return true;
  }

  // literal_string | literal_strings
  private static boolean annotation_item_1_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_item_1_1_0")) return false;
    boolean r;
    r = consumeToken(b, LITERAL_STRING);
    if (!r) r = literal_strings(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // annotation_item* "cmd" text? ("{" (cmd_item | key_value_item | key_type_item)+ "}")?
  static boolean cmd_item(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cmd_item")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = cmd_item_0(b, l + 1);
    r = r && consumeToken(b, "cmd");
    r = r && cmd_item_2(b, l + 1);
    r = r && cmd_item_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // annotation_item*
  private static boolean cmd_item_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cmd_item_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!annotation_item(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "cmd_item_0", c)) break;
    }
    return true;
  }

  // text?
  private static boolean cmd_item_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cmd_item_2")) return false;
    text(b, l + 1);
    return true;
  }

  // ("{" (cmd_item | key_value_item | key_type_item)+ "}")?
  private static boolean cmd_item_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cmd_item_3")) return false;
    cmd_item_3_0(b, l + 1);
    return true;
  }

  // "{" (cmd_item | key_value_item | key_type_item)+ "}"
  private static boolean cmd_item_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cmd_item_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "{");
    r = r && cmd_item_3_0_1(b, l + 1);
    r = r && consumeToken(b, "}");
    exit_section_(b, m, null, r);
    return r;
  }

  // (cmd_item | key_value_item | key_type_item)+
  private static boolean cmd_item_3_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cmd_item_3_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = cmd_item_3_0_1_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!cmd_item_3_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "cmd_item_3_0_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // cmd_item | key_value_item | key_type_item
  private static boolean cmd_item_3_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cmd_item_3_0_1_0")) return false;
    boolean r;
    r = cmd_item(b, l + 1);
    if (!r) r = key_value_item(b, l + 1);
    if (!r) r = key_type_item(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // line_comment|block_comment
  static boolean comment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comment")) return false;
    if (!nextTokenIs(b, "", BLOCK_COMMENT, LINE_COMMENT)) return false;
    boolean r;
    r = consumeToken(b, LINE_COMMENT);
    if (!r) r = consumeToken(b, BLOCK_COMMENT);
    return r;
  }

  /* ********************************************************** */
  // "~" key_type_items
  static boolean cookie(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cookie")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "~");
    r = r && key_type_items(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (integer_scope? ("*"? (simple_type | type_reference )) integer_scope?) | float_data_type
  public static boolean data_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DATA_TYPE, "<data type>");
    r = data_type_0(b, l + 1);
    if (!r) r = float_data_type(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // integer_scope? ("*"? (simple_type | type_reference )) integer_scope?
  private static boolean data_type_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = data_type_0_0(b, l + 1);
    r = r && data_type_0_1(b, l + 1);
    r = r && data_type_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // integer_scope?
  private static boolean data_type_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type_0_0")) return false;
    integer_scope(b, l + 1);
    return true;
  }

  // "*"? (simple_type | type_reference )
  private static boolean data_type_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = data_type_0_1_0(b, l + 1);
    r = r && data_type_0_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // "*"?
  private static boolean data_type_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type_0_1_0")) return false;
    consumeToken(b, "*");
    return true;
  }

  // simple_type | type_reference
  private static boolean data_type_0_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type_0_1_1")) return false;
    boolean r;
    r = consumeToken(b, SIMPLE_TYPE);
    if (!r) r = type_reference(b, l + 1);
    return r;
  }

  // integer_scope?
  private static boolean data_type_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type_0_2")) return false;
    integer_scope(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // "{" "}"
  static boolean empty_object(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "empty_object")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "{");
    r = r && consumeToken(b, "}");
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // integer_scope? ("*"? ("float32" | "float64")) float_scope?
  static boolean float_data_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_data_type")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = float_data_type_0(b, l + 1);
    r = r && float_data_type_1(b, l + 1);
    r = r && float_data_type_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // integer_scope?
  private static boolean float_data_type_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_data_type_0")) return false;
    integer_scope(b, l + 1);
    return true;
  }

  // "*"? ("float32" | "float64")
  private static boolean float_data_type_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_data_type_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = float_data_type_1_0(b, l + 1);
    r = r && float_data_type_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // "*"?
  private static boolean float_data_type_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_data_type_1_0")) return false;
    consumeToken(b, "*");
    return true;
  }

  // "float32" | "float64"
  private static boolean float_data_type_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_data_type_1_1")) return false;
    boolean r;
    r = consumeToken(b, "float32");
    if (!r) r = consumeToken(b, "float64");
    return r;
  }

  // float_scope?
  private static boolean float_data_type_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_data_type_2")) return false;
    float_scope(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // "[" ((literal_float "," literal_float) | (literal_float ",") | ("," literal_float))? "]"
  static boolean float_scope(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_scope")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "[");
    r = r && float_scope_1(b, l + 1);
    r = r && consumeToken(b, "]");
    exit_section_(b, m, null, r);
    return r;
  }

  // ((literal_float "," literal_float) | (literal_float ",") | ("," literal_float))?
  private static boolean float_scope_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_scope_1")) return false;
    float_scope_1_0(b, l + 1);
    return true;
  }

  // (literal_float "," literal_float) | (literal_float ",") | ("," literal_float)
  private static boolean float_scope_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_scope_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = float_scope_1_0_0(b, l + 1);
    if (!r) r = float_scope_1_0_1(b, l + 1);
    if (!r) r = float_scope_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // literal_float "," literal_float
  private static boolean float_scope_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_scope_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LITERAL_FLOAT);
    r = r && consumeToken(b, ",");
    r = r && consumeToken(b, LITERAL_FLOAT);
    exit_section_(b, m, null, r);
    return r;
  }

  // literal_float ","
  private static boolean float_scope_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_scope_1_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LITERAL_FLOAT);
    r = r && consumeToken(b, ",");
    exit_section_(b, m, null, r);
    return r;
  }

  // "," literal_float
  private static boolean float_scope_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_scope_1_0_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && consumeToken(b, LITERAL_FLOAT);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // "func" func_name "(" func_params? ")" func_return?
  static boolean func_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_declaration")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "func");
    r = r && func_name(b, l + 1);
    r = r && consumeToken(b, "(");
    r = r && func_declaration_3(b, l + 1);
    r = r && consumeToken(b, ")");
    r = r && func_declaration_5(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // func_params?
  private static boolean func_declaration_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_declaration_3")) return false;
    func_params(b, l + 1);
    return true;
  }

  // func_return?
  private static boolean func_declaration_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_declaration_5")) return false;
    func_return(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // identifier
  public static boolean func_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_name")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, FUNC_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // identifier ("," identifier)* data_type
  static boolean func_param_group(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_param_group")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    r = r && func_param_group_1(b, l + 1);
    r = r && data_type(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ("," identifier)*
  private static boolean func_param_group_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_param_group_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!func_param_group_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "func_param_group_1", c)) break;
    }
    return true;
  }

  // "," identifier
  private static boolean func_param_group_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_param_group_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && consumeToken(b, IDENTIFIER);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // func_param_group ("," func_param_group)* ","?
  static boolean func_params(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_params")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = func_param_group(b, l + 1);
    r = r && func_params_1(b, l + 1);
    r = r && func_params_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ("," func_param_group)*
  private static boolean func_params_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_params_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!func_params_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "func_params_1", c)) break;
    }
    return true;
  }

  // "," func_param_group
  private static boolean func_params_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_params_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && func_param_group(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ","?
  private static boolean func_params_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_params_2")) return false;
    consumeToken(b, ",");
    return true;
  }

  /* ********************************************************** */
  // "(" func_return_params ")" | data_type
  static boolean func_return(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_return")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = func_return_0(b, l + 1);
    if (!r) r = data_type(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // "(" func_return_params ")"
  private static boolean func_return_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_return_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "(");
    r = r && func_return_params(b, l + 1);
    r = r && consumeToken(b, ")");
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // data_type ("," data_type)* ","?
  static boolean func_return_params(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_return_params")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = data_type(b, l + 1);
    r = r && func_return_params_1(b, l + 1);
    r = r && func_return_params_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ("," data_type)*
  private static boolean func_return_params_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_return_params_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!func_return_params_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "func_return_params_1", c)) break;
    }
    return true;
  }

  // "," data_type
  private static boolean func_return_params_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_return_params_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && data_type(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ","?
  private static boolean func_return_params_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_return_params_2")) return false;
    consumeToken(b, ",");
    return true;
  }

  /* ********************************************************** */
  // "." literal_string? (key_type_items | type_reference)?
  static boolean http_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_body")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ".");
    r = r && http_body_1(b, l + 1);
    r = r && http_body_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // literal_string?
  private static boolean http_body_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_body_1")) return false;
    consumeToken(b, LITERAL_STRING);
    return true;
  }

  // (key_type_items | type_reference)?
  private static boolean http_body_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_body_2")) return false;
    http_body_2_0(b, l + 1);
    return true;
  }

  // key_type_items | type_reference
  private static boolean http_body_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_body_2_0")) return false;
    boolean r;
    r = key_type_items(b, l + 1);
    if (!r) r = type_reference(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // "!" key_type_items
  static boolean http_header(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_header")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "!");
    r = r && key_type_items(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // "get" | "post" | "put" | "patch" | "delete" | "options" | "head"
  static boolean http_method(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_method")) return false;
    boolean r;
    r = consumeToken(b, "get");
    if (!r) r = consumeToken(b, "post");
    if (!r) r = consumeToken(b, "put");
    if (!r) r = consumeToken(b, "patch");
    if (!r) r = consumeToken(b, "delete");
    if (!r) r = consumeToken(b, "options");
    if (!r) r = consumeToken(b, "head");
    return r;
  }

  /* ********************************************************** */
  // annotation_item* http_method http_path (http_query | http_header | cookie | http_body | http_resp_header)* http_resp http_resp_header? ";"
  static boolean http_operation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_operation")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = http_operation_0(b, l + 1);
    r = r && http_method(b, l + 1);
    r = r && http_path(b, l + 1);
    r = r && http_operation_3(b, l + 1);
    r = r && http_resp(b, l + 1);
    r = r && http_operation_5(b, l + 1);
    r = r && consumeToken(b, ";");
    exit_section_(b, m, null, r);
    return r;
  }

  // annotation_item*
  private static boolean http_operation_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_operation_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!annotation_item(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "http_operation_0", c)) break;
    }
    return true;
  }

  // (http_query | http_header | cookie | http_body | http_resp_header)*
  private static boolean http_operation_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_operation_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!http_operation_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "http_operation_3", c)) break;
    }
    return true;
  }

  // http_query | http_header | cookie | http_body | http_resp_header
  private static boolean http_operation_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_operation_3_0")) return false;
    boolean r;
    r = http_query(b, l + 1);
    if (!r) r = http_header(b, l + 1);
    if (!r) r = cookie(b, l + 1);
    if (!r) r = http_body(b, l + 1);
    if (!r) r = http_resp_header(b, l + 1);
    return r;
  }

  // http_resp_header?
  private static boolean http_operation_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_operation_5")) return false;
    http_resp_header(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // ("/" (text | ("{" key_type_item ","? "}")))+ "/"?
  static boolean http_path(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_path")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = http_path_0(b, l + 1);
    r = r && http_path_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ("/" (text | ("{" key_type_item ","? "}")))+
  private static boolean http_path_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_path_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = http_path_0_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!http_path_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "http_path_0", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // "/" (text | ("{" key_type_item ","? "}"))
  private static boolean http_path_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_path_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "/");
    r = r && http_path_0_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // text | ("{" key_type_item ","? "}")
  private static boolean http_path_0_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_path_0_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = text(b, l + 1);
    if (!r) r = http_path_0_0_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // "{" key_type_item ","? "}"
  private static boolean http_path_0_0_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_path_0_0_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "{");
    r = r && key_type_item(b, l + 1);
    r = r && http_path_0_0_1_1_2(b, l + 1);
    r = r && consumeToken(b, "}");
    exit_section_(b, m, null, r);
    return r;
  }

  // ","?
  private static boolean http_path_0_0_1_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_path_0_0_1_1_2")) return false;
    consumeToken(b, ",");
    return true;
  }

  // "/"?
  private static boolean http_path_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_path_1")) return false;
    consumeToken(b, "/");
    return true;
  }

  /* ********************************************************** */
  // "?" key_type_items
  static boolean http_query(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_query")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "?");
    r = r && key_type_items(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // literal_integer literal_string? (key_type_items | type_reference)?
  static boolean http_resp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_resp")) return false;
    if (!nextTokenIs(b, LITERAL_INTEGER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LITERAL_INTEGER);
    r = r && http_resp_1(b, l + 1);
    r = r && http_resp_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // literal_string?
  private static boolean http_resp_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_resp_1")) return false;
    consumeToken(b, LITERAL_STRING);
    return true;
  }

  // (key_type_items | type_reference)?
  private static boolean http_resp_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_resp_2")) return false;
    http_resp_2_0(b, l + 1);
    return true;
  }

  // key_type_items | type_reference
  private static boolean http_resp_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_resp_2_0")) return false;
    boolean r;
    r = key_type_items(b, l + 1);
    if (!r) r = type_reference(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // "!!" key_type_items
  static boolean http_resp_header(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "http_resp_header")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "!!");
    r = r && key_type_items(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // "[" ((literal_integer "," literal_integer) | (literal_integer ",") | ("," literal_integer))? "]"
  static boolean integer_scope(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "integer_scope")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "[");
    r = r && integer_scope_1(b, l + 1);
    r = r && consumeToken(b, "]");
    exit_section_(b, m, null, r);
    return r;
  }

  // ((literal_integer "," literal_integer) | (literal_integer ",") | ("," literal_integer))?
  private static boolean integer_scope_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "integer_scope_1")) return false;
    integer_scope_1_0(b, l + 1);
    return true;
  }

  // (literal_integer "," literal_integer) | (literal_integer ",") | ("," literal_integer)
  private static boolean integer_scope_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "integer_scope_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
